trunk/Archive2/33/8452828586098e/output
main.cpp:31:16: error: 'vector' is not a class, namespace, or scoped enumeration
    using std::vector::vector;
               ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_vector.h:214:11: note: 'vector' declared here
    class vector : protected _Vector_base<_Tp, _Alloc>
          ^
main.cpp:28:9: error: use of undeclared identifier 'reserve'
        reserve(N);
        ^
2 errors generated.
